--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="lib/history.js"></script>
   <script src="lib/react-router.js"></script>
   <script src="lib/react-router-dom.js"></script>
-
+  <script src="https://kit.fontawesome.com/6f1f8f4e21.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="lib/animate.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <title>Appsus</title>
